reapath must be used to determine WEB-INF/classes